--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
         android:label="vehicle_maintainance"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyAfYQZKKlSn1EP9OKNOKuW0r2Ld3PWELmA"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
