--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   google_fonts: ^2.2.0
   gradient_app_bar: ^0.1.3
   flutter_rating_bar: ^4.0.0
-  google_maps_flutter: ^2.1.1
+  flutter_phone_direct_caller: ^2.1.0
 
 
   flutter:
