--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   gradient_app_bar: ^0.1.3
   flutter_rating_bar: ^4.0.0
   flutter_phone_direct_caller: ^2.1.0
+  cool_alert: ^1.1.0
+
 
 
   flutter:
