--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_rating_bar: ^4.0.0
   flutter_phone_direct_caller: ^2.1.0
   cool_alert: ^1.1.0
+  url_launcher: ^6.0.18
 
 
 
